# GAIO-Analyzer

./: .replit  gaio-full.sql  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  tatus
.agents/memory/: MEMORY.md  admin-auth-pattern.md  express5-params.md  (+2 more)
attached_assets/: Pasted--Add-a-Prompt-Verwaltung-to-the-admin-area-All-AI-promp_1780061321559.txt  Pasted--Add-a-new-Analyseparameter-section-to-both-the-PDF-and_1777895022277.txt  Pasted--Add-an-HTML-file-upload-option-to-the-Angebots-Creator_1780058598349.txt  Pasted--Add-the-content-of-the-FAQ-So-funktioniert-s-page-to-b_1777456618289.txt  Pasted--INCREMENTAL-IMPROVEMENTS-ADD-TO-REPLACE-SPECIFIED-SECT_1776326591384.txt  Pasted--Make-the-following-changes-to-the-HTML-export-generati_1777974195871.txt  Pasted--Make-two-changes-to-the-admin-area-No-new-views-extend_1780055348863.txt  Pasted--Please-fix-the-HTML-export-function-with-the-following_1777454519680.txt  Pasted--Please-fix-the-following-two-issues-These-are-bugs-in-_1777022281008.txt  Pasted--Please-make-the-following-four-changes-Each-is-indepen_1777897604233.txt  Pasted--Please-make-the-following-four-independent-changes-to-_1777019988007.txt  Pasted--Reorganize-the-admin-sidebar-into-collapsible-groups-N_1780064953735.txt  Pasted--Technisches-SEO-and-Heading-Struktur-still-appear-skip_1777982202062.txt  Pasted--The-app-currently-checks-for-the-existence-of-robots-t_1777888518546.txt  Pasted--The-crawler-currently-drills-deep-into-a-single-catego_1777016179796.txt  Pasted--UI-UX-REDESIGN-REPLACE-ALL-PREVIOUS-UI-UX-NOTES-WITH-T_1776278165621.txt  (+106 more)
(+116 files in other folders)
